# template-django-react-app

./: .envrc.example  .eslintrc.json  .gitignore  .prettierrc  404.html  LICENCE  README.md  additional-features.html  app-settings.html  database-setup.py  elastic-beanstalk-deployment.html  index.html  mkdocs.yml  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  s3-resource-storage.html  setup.cfg  sitemap.xml  styling.html  webpack.config.js
.github/workflows/: docs.yml  lint.yml  test.yml
app/: requirements.in  requirements.txt
app/accounts/: admin.py  api.py  helpers.py  models.py  serializers.py  tokens.py  urls.py
app/accounts/migrations/: 0001_initial.py
app/accounts/templates/: base_message.html
app/accounts/templates/email/: account_activation_email.html  account_activation_email.txt  password_reset_email.html  password_reset_email.txt
app/accounts/tests/: tests_login.py  tests_logout.py  tests_models.py  tests_password_reset.py  tests_register.py  tests_user.py
app/api/: admin.py  api.py  models.py  serializers.py  urls.py
app/api/migrations/: 0001_initial.py
app/api/tests/: tests_example_data.py
app/app/: pagination.py  settings.py  urls.py  validators.py
app/frontend/: views.py
app/frontend/src/: index.js
app/frontend/src/app/: App.js  splitApiSlice.js  store.js
assets/: about.txt
docs-development/: additional-features.md  app-settings.md  elastic-beanstalk-deployment.md  index.md  s3-resource-storage.md  styling.md
docs-development/stylesheets/: extra.css
search/: search_index.json
(+26 files in other folders)
