[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.black]
exclude = "node_modules"
line-length = 79

[tool.isort]
include_trailing_comma = true
known_local_folder = [
  "accounts",
  "api",
  "app",
]
known_third_party = [
  "django",
  "django_filters",
  "rest_framework",
  "knox",
]
multi_line_output = 3
profile = "black"
skip = ["migrations"]
